exports[`test Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.github.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Github
</a>
`;

exports[`test Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.github.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Github
</a>
`;

exports[`test Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.github.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  Github
</a>
`;
